Fix Memory leak in in qprotobufserializer.h

- Add deleting of pointer in the setter function

Pick-to: 6.6
Fixes: QTBUG-118996
Change-Id: I7322fb049f9dec493c03ddb9180eb0d4ec57c06e
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>